Issue #1014  - Fix node icon not showing for Drive  - Fix unability to select Drive  - Refactor browse controller, node loading mechanism

--- a/app/styles/pages/common/component/_component-dialog-alert.scss
+++ b/app/styles/pages/common/component/_component-dialog-alert.scss
@@ -187,7 +187,7 @@ FILE DIRECTORY DIALOG
     }
     .lv-icon-ctn {
       font-size: 1.25em;
-      .ls-workgroup {
+      .ls-workgroup, .ls-drive  {
         color: #537792;
       }
     }
